--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     <div class="popup">
       <div class="dark"></div>
       <div class="popup-content">
-        <h1 id="person-name">Тут будут чьи-то имена!</h1>
+        <button id="close-popup">X</button>
+        <h1 id="person-name"><span>Тут будут чьи-то имена!</span></h1>
         <h3 id="person-city">Город: Хуйня</h3>
         <h3 id="person-trait">Если ты это читаешь, то ты умничка)</h3>
         <h1 id="person-cristalls"><span>10</span><img src="coin.png" alt=""></h1>
@@ -97,6 +98,7 @@
         <h1 id="person-param"><label for="param-3">Инициативность:</label><progress id="param-3" max="100" value="70"> 70% </progress></h1>
       </div>
     </div>
+    <button id="shop"><img src="shop.png" alt=""></button>
     <script src="script.js"></script>
 </body>
 </html>
