--- a/shop.html
+++ b/shop.html
@@ -16,36 +16,54 @@
         <input class="radio" type="radio" name="slider" id="item-4">
         <input class="radio" type="radio" name="slider" id="item-5">
         <input class="radio" type="radio" name="slider" id="item-6">
+        <input class="radio" type="radio" name="slider" id="item-7">
+        <input class="radio" type="radio" name="slider" id="item-8">
+        <input class="radio" type="radio" name="slider" id="item-9">
       <div class="cards">
         <label class="card" for="item-1" id="song-1">
             <h3>Подарок от АПП</h3>
             <h1>🎁</h1>
-          <p class="price"><span>10</span><img src="coin.png" alt=""></p>
+          <p class="price"><span>120</span><img src="coin.png" alt=""></p>
         </label>
         <label class="card" for="item-2" id="song-2">
-            <h3>Подарок от АПП</h3>
+            <h3>Постер с Райаном Гослингом</h3>
             <h1>🚗</h1>
-          <p class="price"><span>10</span><img src="coin.png" alt=""></p>
+          <p class="price"><span>150</span><img src="coin.png" alt=""></p>
         </label>
         <label class="card" for="item-3" id="song-3">
-            <h3>Подарок от АПП</h3>
+            <h3>Шопер с Фламинго</h3>
             <h1>🦩</h1>
-          <p class="price"><span>10</span><img src="coin.png" alt=""></p>
+          <p class="price"><span>450</span><img src="coin.png" alt=""></p>
         </label>
         <label class="card" for="item-4" id="song-4">
-            <h3>Подарок от АПП</h3>
+            <h3>Премия на смене</h3>
             <h1>💵</h1>
-            <p class="price"><span>10</span><img src="coin.png" alt=""></p>
+            <p class="price"><span>300</span><img src="coin.png" alt=""></p>
         </label>
         <label class="card" for="item-5" id="song-5">
-            <h3>Подарок от АПП</h3>
+            <h3>Дополнительный голос<br>при выборе вожатника</h3>
             <h1>✅</h1>
-            <p class="price"><span>10</span><img src="coin.png" alt=""></p>
+            <p class="price"><span>180</span><img src="coin.png" alt=""></p>
         </label>
         <label class="card" for="item-6" id="song-6">
-            <h3>Подарок от АПП</h3>
+            <h3>Закрытая тусовка директоров</h3>
             <h1>🛒</h1>
-            <p class="price"><span>10</span><img src="coin.png" alt=""></p>
+            <p class="price"><span>600</span><img src="coin.png" alt=""></p>
+        </label>
+        <label class="card" for="item-7" id="song-7">
+            <h3>Драйвовая кружка</h3>
+            <h1>☕</h1>
+            <p class="price"><span>280</span><img src="coin.png" alt=""></p>
+        </label>
+        <label class="card" for="item-8" id="song-8">
+            <h3>Можно проснуться к обеду (один раз за смену)</h3>
+            <h1>🛏️</h1>
+            <p class="price"><span>180</span><img src="coin.png" alt=""></p>
+        </label>
+        <label class="card" for="item-9" id="song-9">
+            <h3>Посмотреть и исправить свою характеристику на смене</h3>
+            <h1>📜</h1>
+            <p class="price"><span>300</span><img src="coin.png" alt=""></p>
         </label>
         <!--<label class="card" for="item-7" id="song-7">
             <h3>Подарок от АПП</h3>
