--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </div>
             </label>
             <label class="song-info" id="song-info-4">
-                <div class="title">Лиза Ясинская</div>
+                <div class="title">Вакантная должность</div>
                 <div class="sub-line">
                   <div class="subtitle">Drive Dance Club</div>
                 </div>
